update html with tertiary color

--- a/UI-UX_challenge/Three projects/SaveWeb2zip-useplink-com/index.html
+++ b/UI-UX_challenge/Three projects/SaveWeb2zip-useplink-com/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#151515">
 
-    <title>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </title>
-    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore">
+    <title>Lorem ipsum dolor sit <span style="color: #9A4A9E">amet</span>, consectetur adipiscing elit </title>
+    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
 
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="images/favicon-64x64.png" sizes="64x64">
@@ -117,8 +117,8 @@
     </div>
     <div class="home_titles">
         <h1 class="title">
-            <span>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit,,</span>
-            <span> sed do eiusmod tempor incididunt <br>ut labore!</span>
+            <span>Lorem ipsum dolor sit <span style="color: #9A4A9E">amet</span><br>consectetur adipiscing elit,,</span>
+            <span> sed do eiusmod <br></span>
         </h1>
         <h2 class="baseline">ut labore  ipsum dolor sit am.</h2>
     </div>
@@ -151,13 +151,13 @@
         </div>
     </div>
     <div class="home_titles block-anim no-slide just-below">
-        <h1 class="title">atis a condiment<br>faucibus a<br>nim nun</h1>
+        <h1 class="title">Atis a <span style="color: #9A4A9E">amet</span> condiment<br>faucibus a<br>nim nun</h1>
         <h2 class="baseline"><p>nim nunc faucibus a pellentesque sit. Tempus <strong>bibendum</strong><br> r pretium atis a condiment</p>
         </h2>
     </div>
     <ul class="home_create_facts">
         <li>
-            <h3 class="title">Atis a condiment</h3>
+            <h3 class="title">Atis a  condiment</h3>
             <h4 class="text"> ipsum dolor sit amet od tempor incididunt.</h4>
         </li>
         <li>
@@ -182,14 +182,14 @@
         </video>
     </div>
     <div class="home_titles">
-        <h1 class="title">Amcorper mal<br>per malesuada proin li<br>rum quisque n</h1>
+        <h1 class="title">Amcorper mal<br>per <span style="color: #9A4A9E">amet</span> malesuada proin li<br>rum quisque n</h1>
         <h2 class="baseline">... sit. Gravida rutrum quisque non tellus. Magna fringill</h2>
     </div>
 </section>
 
 <section class="home_scan">
     <div class="home_titles">
-        <h1 class="title">Rum quisque n<br>  Gravida r</h1>
+        <h1 class="title">Rum quisque n<br> <span style="color: #9A4A9E">amet</span> Gravida r</h1>
         <h2 class="baseline">uisque non tellnto  ullamcorper malesuastomers uis varius quam quis.</h2>
     </div>
     <div class="home_scan_qr-code-wrapper prllx" data-prllx-d="-100">
@@ -217,7 +217,7 @@
 </section>
                         <section class="home_payment nav-switch" data-switch-color="#000000">
     <div class="home_titles">
-        <h1 class="title">Uis varius quam quis <br>esuada pr</h1>
+        <h1 class="title">Uis varius <span style="color: #9A4A9E">amet</span> quam quis <br>esuada pr</h1>
         <h2 class="baseline">on tellnto  ullamcorper malesuastomers uis varius quam quis.</h2>
     </h2>
     </div>
@@ -242,7 +242,7 @@
         </div>
     </div>
     <div class="home_titles">
-        <h1 class="title">Corper malesuas<br>lnto  ullamcorpe</h1>
+        <h1 class="title">Corper <span style="color: #9A4A9E">amet</span> malesuas<br>lnto  ullamcorpe</h1>
                     <a class="footer_cta button" rel="nofollow" name="Login with mollie" href="/login" target="_blank"><h2>Login with trivago</h2></a>
             </div>
     <div class="footer_bottom">
